// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Breakpoint renders correctly down prop 1`] = `
<DocumentFragment>
  .cache-1tlyixw {
  display: none;
}

@media (max-width: 768px) {
  .cache-1tlyixw {
    display: block;
  }
}

<div
    class="cache-1tlyixw e18983st0"
  >
    Hello
  </div>
</DocumentFragment>
`;

exports[`Breakpoint renders correctly up prop 1`] = `
<DocumentFragment>
  .cache-1lu1she {
  display: none;
}

@media (min-width: 768px) {
  .cache-1lu1she {
    display: block;
  }
}

<div
    class="cache-1lu1she e18983st0"
  >
    Hello
  </div>
</DocumentFragment>
`;
